fix btn app ui overflow

--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -192,7 +192,7 @@ option[value=""][disabled] {
   background-color: #fc8118;
 }
 
-.back-btn {
+.register-back-btn {
   width: 380px;
   height: 60px;
   object-fit: contain;
